--- a/theme/luci-theme-argon-mc/luasrc/view/themes/argon_mc/footer.htm
+++ b/theme/luci-theme-argon-mc/luasrc/view/themes/argon_mc/footer.htm
@@ -1,33 +1,21 @@
 <%#
-	Argon is a clean HTML5 theme for LuCI. It is based on luci-theme-material and Argon Template
+    Material is a clean HTML5 theme for LuCI. It is based on luci-theme-bootstrap and MUI
 
-	luci-theme-argon
-	Copyright 2019 Jerrykuku <jerrykuku@qq.com>
+    luci-theme-material
+        Copyright 2015 Lutty Yang <lutty@wcan.in>
 
-	Have a bug? Please create an issue here on GitHub!
-	https://github.com/jerrykuku/luci-theme-argon/issues
+    Have a bug? Please create an issue here on GitHub!
+        https://github.com/LuttyYang/luci-theme-material/issues
 
-	luci-theme-bootstrap:
-	Copyright 2008 Steven Barth <steven@midlink.org>
-	Copyright 2008-2016 Jo-Philipp Wich <jow@openwrt.org>
-	Copyright 2012 David Menting <david@nut-bolt.nl>
+    luci-theme-bootstrap:
+    Copyright 2008 Steven Barth <steven@midlink.org>
+    Copyright 2008 Jo-Philipp Wich <jow@openwrt.org>
+    Copyright 2012 David Menting <david@nut-bolt.nl>
 
-	MUI:
-	https://github.com/muicss/mui
+    MUI:
+    https://github.com/muicss/mui
 
-	luci-theme-material:
-	https://github.com/LuttyYang/luci-theme-material/
-
-	Agron Theme
-	https://demos.creative-tim.com/argon-dashboard/index.html
-
-	Login background
-	https://unsplash.com/
-
-	Font generate by Icomoon
-	https://icomoon.io/
-
-	Licensed to the public under the Apache License 2.0
+    Licensed to the public under the Apache License 2.0
 -%>
 
 <%
@@ -58,6 +46,6 @@
         var luciLocation = <%= luci.http.write_json(luci.dispatcher.context.path) %>;
     </script>
     
-    <script src="<%=media%>/js/script.js?v=<%=math.random(1,100000)%>"></script>
+    <script src="<%=media%>/js/script.js?v=git-19.010.30902-fbc92dc"></script>
 </body>
 </html>
